新增或修改

--- a/zhipin.html
+++ b/zhipin.html
@@ -507,73 +507,169 @@
               <div class="li_top">
                 <a class="li_position" href="https://www.lagou.com/jobs/3749121.html" target="_blank">Java开发工程师 </a>
                 <span class="create-time">[1天前发布]</span>
+                <div class="chat_me"></div>
+                <span class="salary">20k-30k·13薪</span>
               </div>
-              <div class="li_wordcut"></div>
-              <div class="li_labels"></div>
-              <div class="li_bottom"></div>
+              <div class="li_wordcut">经验5-10年 / 本科</div>
+              <div class="li_labels">
+                <span class="wordcut_01">电商</span>
+                <span class="wordcut_02">Java</span>
+                <span class="wordcut_03">MySQL</span>
+              </div>
+              <div class="li_bottom">
+                <a class="logo" href="https://www.lagou.com/gongsi/144576.html" target="_blank"></a>
+                <div class="bottom-right">
+                  <a class="company_name" href="https://www.lagou.com/gongsi/144576.html" target="_blank">杉数科技</a>
+                  <span class="industry_wordCut">数据服务,移动互联网 / B轮 / 北京</span>
+                </div>
+              </div>
             </li>
             <li class="list_li_02">
               <div class="li_top">
                 <a class="li_position" href="https://www.lagou.com/jobs/3749121.html" target="_blank">Java开发工程师 </a>
                 <span class="create-time">[1天前发布]</span>
+                <div class="chat_me"></div>
+                <span class="salary">20k-30k·13薪</span>
               </div>
-              <div class="li_wordcut"></div>
-              <div class="li_labels"></div>
-              <div class="li_bottom"></div>
+              <div class="li_wordcut">经验5-10年 / 本科</div>
+              <div class="li_labels">
+                <span class="wordcut_01">电商</span>
+                <span class="wordcut_02">Java</span>
+                <span class="wordcut_03">MySQL</span>
+              </div>
+              <div class="li_bottom">
+                <a class="logo" href="https://www.lagou.com/gongsi/144576.html" target="_blank"></a>
+                <div class="bottom-right">
+                  <a class="company_name" href="https://www.lagou.com/gongsi/144576.html" target="_blank">杉数科技</a>
+                  <span class="industry_wordCut">数据服务,移动互联网 / B轮 / 北京</span>
+                </div>
+              </div>
             </li>
             <li class="list_li_03">
               <div class="li_top">
                 <a class="li_position" href="https://www.lagou.com/jobs/3749121.html" target="_blank">Java开发工程师 </a>
                 <span class="create-time">[1天前发布]</span>
+                <div class="chat_me"></div>
+                <span class="salary">20k-30k·13薪</span>
               </div>
-              <div class="li_wordcut"></div>
-              <div class="li_labels"></div>
-              <div class="li_bottom"></div>
+              <div class="li_wordcut">经验5-10年 / 本科</div>
+              <div class="li_labels">
+                <span class="wordcut_01">电商</span>
+                <span class="wordcut_02">Java</span>
+                <span class="wordcut_03">MySQL</span>
+              </div>
+              <div class="li_bottom">
+                <a class="logo" href="https://www.lagou.com/gongsi/144576.html" target="_blank"></a>
+                <div class="bottom-right">
+                  <a class="company_name" href="https://www.lagou.com/gongsi/144576.html" target="_blank">杉数科技</a>
+                  <span class="industry_wordCut">数据服务,移动互联网 / B轮 / 北京</span>
+                </div>
+              </div>
             </li>
             <li class="list_li_04">
               <div class="li_top">
                 <a class="li_position" href="https://www.lagou.com/jobs/3749121.html" target="_blank">Java开发工程师 </a>
                 <span class="create-time">[1天前发布]</span>
+                <div class="chat_me"></div>
+                <span class="salary">20k-30k·13薪</span>
               </div>
-              <div class="li_wordcut"></div>
-              <div class="li_labels"></div>
-              <div class="li_bottom"></div>
+              <div class="li_wordcut">经验5-10年 / 本科</div>
+              <div class="li_labels">
+                <span class="wordcut_01">电商</span>
+                <span class="wordcut_02">Java</span>
+                <span class="wordcut_03">MySQL</span>
+              </div>
+              <div class="li_bottom">
+                <a class="logo" href="https://www.lagou.com/gongsi/144576.html" target="_blank"></a>
+                <div class="bottom-right">
+                  <a class="company_name" href="https://www.lagou.com/gongsi/144576.html" target="_blank">杉数科技</a>
+                  <span class="industry_wordCut">数据服务,移动互联网 / B轮 / 北京</span>
+                </div>
+              </div>
             </li>
             <li class="list_li_05">
               <div class="li_top">
                 <a class="li_position" href="https://www.lagou.com/jobs/3749121.html" target="_blank">Java开发工程师 </a>
                 <span class="create-time">[1天前发布]</span>
+                <div class="chat_me"></div>
+                <span class="salary">20k-30k·13薪</span>
               </div>
-              <div class="li_wordcut"></div>
-              <div class="li_labels"></div>
-              <div class="li_bottom"></div>
+              <div class="li_wordcut">经验5-10年 / 本科</div>
+              <div class="li_labels">
+                <span class="wordcut_01">电商</span>
+                <span class="wordcut_02">Java</span>
+                <span class="wordcut_03">MySQL</span>
+              </div>
+              <div class="li_bottom">
+                <a class="logo" href="https://www.lagou.com/gongsi/144576.html" target="_blank"></a>
+                <div class="bottom-right">
+                  <a class="company_name" href="https://www.lagou.com/gongsi/144576.html" target="_blank">杉数科技</a>
+                  <span class="industry_wordCut">数据服务,移动互联网 / B轮 / 北京</span>
+                </div>
+              </div>
             </li>
             <li class="list_li_06">
               <div class="li_top">
                 <a class="li_position" href="https://www.lagou.com/jobs/3749121.html" target="_blank">Java开发工程师 </a>
                 <span class="create-time">[1天前发布]</span>
+                <div class="chat_me"></div>
+                <span class="salary">20k-30k·13薪</span>
               </div>
-              <div class="li_wordcut"></div>
-              <div class="li_labels"></div>
-              <div class="li_bottom"></div>
+              <div class="li_wordcut">经验5-10年 / 本科</div>
+              <div class="li_labels">
+                <span class="wordcut_01">电商</span>
+                <span class="wordcut_02">Java</span>
+                <span class="wordcut_03">MySQL</span>
+              </div>
+              <div class="li_bottom">
+                <a class="logo" href="https://www.lagou.com/gongsi/144576.html" target="_blank"></a>
+                <div class="bottom-right">
+                  <a class="company_name" href="https://www.lagou.com/gongsi/144576.html" target="_blank">杉数科技</a>
+                  <span class="industry_wordCut">数据服务,移动互联网 / B轮 / 北京</span>
+                </div>
+              </div>
             </li>
             <li class="list_li_07">
               <div class="li_top">
                 <a class="li_position" href="https://www.lagou.com/jobs/3749121.html" target="_blank">Java开发工程师 </a>
                 <span class="create-time">[1天前发布]</span>
+                <div class="chat_me"></div>
+                <span class="salary">20k-30k·13薪</span>
               </div>
-              <div class="li_wordcut"></div>
-              <div class="li_labels"></div>
-              <div class="li_bottom"></div>
+              <div class="li_wordcut">经验5-10年 / 本科</div>
+              <div class="li_labels">
+                <span class="wordcut_01">电商</span>
+                <span class="wordcut_02">Java</span>
+                <span class="wordcut_03">MySQL</span>
+              </div>
+              <div class="li_bottom">
+                <a class="logo" href="https://www.lagou.com/gongsi/144576.html" target="_blank"></a>
+                <div class="bottom-right">
+                  <a class="company_name" href="https://www.lagou.com/gongsi/144576.html" target="_blank">杉数科技</a>
+                  <span class="industry_wordCut">数据服务,移动互联网 / B轮 / 北京</span>
+                </div>
+              </div>
             </li>
             <li class="list_li_08">
               <div class="li_top">
                 <a class="li_position" href="https://www.lagou.com/jobs/3749121.html" target="_blank">Java开发工程师 </a>
                 <span class="create-time">[1天前发布]</span>
+                <div class="chat_me"></div>
+                <span class="salary">20k-30k·13薪</span>
               </div>
-              <div class="li_wordcut"></div>
-              <div class="li_labels"></div>
-              <div class="li_bottom"></div>
+              <div class="li_wordcut">经验5-10年 / 本科</div>
+              <div class="li_labels">
+                <span class="wordcut_01">电商</span>
+                <span class="wordcut_02">Java</span>
+                <span class="wordcut_03">MySQL</span>
+              </div>
+              <div class="li_bottom">
+                <a class="logo" href="https://www.lagou.com/gongsi/144576.html" target="_blank"></a>
+                <div class="bottom-right">
+                  <a class="company_name" href="https://www.lagou.com/gongsi/144576.html" target="_blank">杉数科技</a>
+                  <span class="industry_wordCut">数据服务,移动互联网 / B轮 / 北京</span>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
