新增或修改

--- a/zhipin.html
+++ b/zhipin.html
@@ -502,7 +502,7 @@
         <span class="tips">过去24小时，最多人看过的岗位在这里</span>
         <span class="tips_iknow">我知道了</span>
         <div class="list-wrapper">
-          <ul class="list_ul">
+          <ul class="list_ul_01">
             <li class="list_li_01">
               <div class="li_top">
                 <a class="li_position" href="https://www.lagou.com/jobs/3749121.html" target="_blank">Java开发工程师 </a>
@@ -672,12 +672,182 @@
               </div>
             </li>
           </ul>
+          <a class="list_more" href="https://www.lagou.com/zhaopin/">查看更多</a>
         </div>
       </div>
     </div>
-    <div id="container-companys">
-      <div class="container-companys-body">
-        <div class="ad-companys"></div>
+    <div id="container-job">
+      <div class="inner">
+        <div class="tab">
+          <div class="module-tabs">互联网热门公司榜</div>
+        </div>
+        <span class="hot_company_tips">互联网行业实力热门企业</span>
+        <span class="hot_company_tips_iknow">我知道了</span>
+        <div class="list-wrapper">
+          <ul class="list_ul_company_01">
+            <li class="list_li_01">
+              <div class="li_company-logo"></div>
+              <div class="li_company-name">众享比特</div>
+              <div class="li_company-stage">移动互联网 / C轮</div>
+              <div class="li_company-advantage">网络安全、互联网安全和移动互联网安全市场 以及分布式计算、密码安全、对等网络技术</div>
+              <div class="li_company_bottom">
+                <a class="bottom-item_01" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">面试评价</p>
+                </a>
+                <a class="bottom-item_02" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">在招职位</p>
+                </a>
+                <a class="bottom-item_03" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">100%</p>
+                  <p class="item-bottom">简历处理率</p>
+                </a>
+              </div>
+            </li>
+            <li class="list_li_02">
+              <div class="li_company-logo"></div>
+              <div class="li_company-name">众享比特</div>
+              <div class="li_company-stage">移动互联网 / C轮</div>
+              <div class="li_company-advantage">网络安全、互联网安全和移动互联网安全市场 以及分布式计算、密码安全、对等网络技术</div>
+              <div class="li_company_bottom">
+                <a class="bottom-item_01" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">面试评价</p>
+                </a>
+                <a class="bottom-item_02" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">在招职位</p>
+                </a>
+                <a class="bottom-item_03" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">100%</p>
+                  <p class="item-bottom">简历处理率</p>
+                </a>
+              </div>
+            </li>
+            <li class="list_li_03">
+              <div class="li_company-logo"></div>
+              <div class="li_company-name">众享比特</div>
+              <div class="li_company-stage">移动互联网 / C轮</div>
+              <div class="li_company-advantage">网络安全、互联网安全和移动互联网安全市场 以及分布式计算、密码安全、对等网络技术</div>
+              <div class="li_company_bottom">
+                <a class="bottom-item_01" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">面试评价</p>
+                </a>
+                <a class="bottom-item_02" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">在招职位</p>
+                </a>
+                <a class="bottom-item_03" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">100%</p>
+                  <p class="item-bottom">简历处理率</p>
+                </a>
+              </div>
+            </li>
+            <li class="list_li_04">
+              <div class="li_company-logo"></div>
+              <div class="li_company-name">众享比特</div>
+              <div class="li_company-stage">移动互联网 / C轮</div>
+              <div class="li_company-advantage">网络安全、互联网安全和移动互联网安全市场 以及分布式计算、密码安全、对等网络技术</div>
+              <div class="li_company_bottom">
+                <a class="bottom-item_01" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">面试评价</p>
+                </a>
+                <a class="bottom-item_02" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">在招职位</p>
+                </a>
+                <a class="bottom-item_03" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">100%</p>
+                  <p class="item-bottom">简历处理率</p>
+                </a>
+              </div>
+            </li>
+            <li class="list_li_05">
+              <div class="li_company-logo"></div>
+              <div class="li_company-name">众享比特</div>
+              <div class="li_company-stage">移动互联网 / C轮</div>
+              <div class="li_company-advantage">网络安全、互联网安全和移动互联网安全市场 以及分布式计算、密码安全、对等网络技术</div>
+              <div class="li_company_bottom">
+                <a class="bottom-item_01" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">面试评价</p>
+                </a>
+                <a class="bottom-item_02" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">在招职位</p>
+                </a>
+                <a class="bottom-item_03" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">100%</p>
+                  <p class="item-bottom">简历处理率</p>
+                </a>
+              </div>
+            </li>
+            <li class="list_li_06">
+              <div class="li_company-logo"></div>
+              <div class="li_company-name">众享比特</div>
+              <div class="li_company-stage">移动互联网 / C轮</div>
+              <div class="li_company-advantage">网络安全、互联网安全和移动互联网安全市场 以及分布式计算、密码安全、对等网络技术</div>
+              <div class="li_company_bottom">
+                <a class="bottom-item_01" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">面试评价</p>
+                </a>
+                <a class="bottom-item_02" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">在招职位</p>
+                </a>
+                <a class="bottom-item_03" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">100%</p>
+                  <p class="item-bottom">简历处理率</p>
+                </a>
+              </div>
+            </li>
+            <li class="list_li_07">
+              <div class="li_company-logo"></div>
+              <div class="li_company-name">众享比特</div>
+              <div class="li_company-stage">移动互联网 / C轮</div>
+              <div class="li_company-advantage">网络安全、互联网安全和移动互联网安全市场 以及分布式计算、密码安全、对等网络技术</div>
+              <div class="li_company_bottom">
+                <a class="bottom-item_01" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">面试评价</p>
+                </a>
+                <a class="bottom-item_02" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">在招职位</p>
+                </a>
+                <a class="bottom-item_03" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">100%</p>
+                  <p class="item-bottom">简历处理率</p>
+                </a>
+              </div>
+            </li>
+            <li class="list_li_08">
+              <div class="li_company-logo"></div>
+              <div class="li_company-name">众享比特</div>
+              <div class="li_company-stage">移动互联网 / C轮</div>
+              <div class="li_company-advantage">网络安全、互联网安全和移动互联网安全市场 以及分布式计算、密码安全、对等网络技术</div>
+              <div class="li_company_bottom">
+                <a class="bottom-item_01" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">面试评价</p>
+                </a>
+                <a class="bottom-item_02" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">9</p>
+                  <p class="item-bottom">在招职位</p>
+                </a>
+                <a class="bottom-item_03" href="https://www.lagou.com/gongsi/i29789.html">
+                  <p class="item-top">100%</p>
+                  <p class="item-bottom">简历处理率</p>
+                </a>
+              </div>
+            </li>
+          </ul>
+          <a class="list_more" href="https://www.lagou.com/zhaopin/">查看更多</a>
+        </div>
       </div>
     </div>
   </body>
