新增或修改

--- a/zhipin.html
+++ b/zhipin.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="linkbox.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="header">
@@ -847,6 +848,18 @@
             </li>
           </ul>
           <a class="list_more" href="https://www.lagou.com/zhaopin/">查看更多</a>
+          <div class="linkbox">
+            <dl class="linkbox_tab">
+              <dt class="friendly_link">
+                <span>友情链接</span> 
+              </dt>
+            </dl>
+            <dl class="linkbox_link">
+              <dd class="find_work>
+                <span>找工作</span>
+              </dd>
+            </dl>
+          </div>
         </div>
       </div>
     </div>
