新增或修改

--- a/zhipin.html
+++ b/zhipin.html
@@ -2,6 +2,7 @@
   <head>
     <link href="index.css" rel="stylesheet" type="text/css" />
     <link href="linkbox.css" rel="stylesheet" type="text/css" />
+    <link href="footer.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="header">
@@ -855,10 +856,69 @@
               </dt>
             </dl>
             <dl class="linkbox_link">
-              <dd class="find_work">
-                <span>找工作</span>
+              <dd class="links">
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
+                <a class="friend-link" href="https://www.lagou.com/" target="_blank">找工作</a>
               </dd>
             </dl>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+      <div class="inner_wrapper">
+        <div class="footer_module_column">
+          <div class="footer_app">
+            <div class="footer_app_icon"></div>
+            下载拉勾APP
+          </div>
+          <div class="footer_mina">
+            <div class="footer_mina_icon"></div>
+            微信小程序
+          </div>
+          <div class="footer_module_item">
+            <div class="footer_wechat">
+              <div class="footer_wechat_icon"></div>
+              拉勾微信
+            </div>
+            <div class="footer_webo">
+              <div class="footer_webo_icon"></div>
+              拉勾微博
+            </div>
+          </div>
+        </div>
+        <div class="footer_module_right">
+          <div class="footer_module_business">
+            <p class="footer_module_title">企业服务</p>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">招聘抢人宝典</a>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">公司搜索</a>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">拉钩APP</a>
+          </div>
+          <div class="footer_module_business">
+            <p class="footer_module_title">用户帮助</p>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">用户协议</a>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">隐私政策</a>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">在线提问</a>
+          </div>
+          <div class="footer_module_business">
+            <p class="footer_module_title">联系方式</p>
+            <span>服务热线：4006 2828 35 (9:00 -18:00)</span>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">企业服务邮箱：cc@lagou.com</a>
+            <a href="https://activity.lagou.com/activity/dist/business-2018/#/" target="_blank">联系我们</a>
           </div>
         </div>
       </div>
