新增或修改

--- a/zhipin.html
+++ b/zhipin.html
@@ -923,5 +923,24 @@
         </div>
       </div>
     </div>
+    <div id="copyright">
+      <div class="copyright_main">
+        <div class="copyright_main_left">
+          <span>©2020 拉勾网 京ICP备14023790号-2</span>
+          <div class="footer_lagou_gongan"></div>
+          <span>京公网安备 11010802024043号</span>
+          <div class="footer_lagou_jubao">
+            <div class="lagou_jubao"></div>
+            <div class="lagou_jubao_icon">
+              <span>违法和不良信息举报</span>
+              <span>电话: 4006 2828 35</span>
+              <span>邮箱: cc@lagou.com</span>
+            </div>
+          </div>
+        </div>
+        <div class="copyright_main_right"></div>
+      </div>
+    </div>
+    <div id="backtop" title="回到顶部"></div>
   </body>
 </html>
