新增或修改

--- a/zhipin.html
+++ b/zhipin.html
@@ -889,6 +889,7 @@
           <div class="footer_mina">
             <div class="footer_mina_icon"></div>
             微信小程序
+            <img src="https://www.lgstatic.com/thumbnail_160x160/image2/M00/6B/22/CgoYOF4W2QiAMqnEAACTzillcXg629.png">
           </div>
           <div class="footer_module_item">
             <div class="footer_wechat">
