新增或修改

--- a/zhipin.html
+++ b/zhipin.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <link href="index.css" rel="stylesheet" type="text/css" />
-    <link href="linkbox.css" rel="stylesheet" type="text/css" />
-    <link href="footer.css" rel="stylesheet" type="text/css" />
+    <link href="zhipin-index.css" rel="stylesheet" type="text/css" />
+    <link href="zhipin-linkbox.css" rel="stylesheet" type="text/css" />
+    <link href="zhipin-footer.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="header">
