--- a/zhipin.html
+++ b/zhipin.html
@@ -5,30 +5,48 @@
     <link href="zhipin-footer.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="header">
-      <div class="header-main">
-        <div class="logo"></div>
-        <div class="nav-city">
-          <div class="icon-poi"></div>
-          <div class="nav-city-selected">西安</div>
-          <div class="switchover-city">[切换城市]</div>
+    <div id="lg_header">
+      <div class="header-inner">
+        <div class="lg_tbar_l">
+          <a class="header-logo" href="https://www.lagou.com/"></a>
+          <ul class="lg_tbar_tabs">
+            <li class="suggestCity">
+              <span class="station">全国站</span>
+              <span class="switch_cities">[切换城市]</span>
+            </li>
+            <li>
+              <a href="https://www.lagou.com/">首页</a>
+            </li>
+            <li>
+              <a href="https://www.lagou.com/">公司</a>
+            </li>
+            <li>
+              <a href="https://www.lagou.com/">校园招聘</a>
+            </li>
+            <li>
+              <a href="https://www.lagou.com/">职位</a>
+            </li>
+            <li>
+              <a href="https://www.lagou.com/">言职</a>
+            </li>
+            <li>
+              <a href="https://www.lagou.com/">课程</a>
+            </li>
+          </ul>
         </div>
-        <div class="nav">
-          <div class="header-home">首页</div>
-          <div class="header-job">职位</div>
-          <div class="nav-school-new">校园</div>
-          <div class="header_brand">公司</div>
-          <div class="header-app">APP</div>
-          <div class="header-article">资讯</div>
-        </div>
-        <div class="btns">
-          <div class="nlp_resume_upload">上传简历</div>
-          <div class="header-geek">我要找工作</div>
-          <div class="header-boss">我要招聘</div>
-          <div class="header-register">注册</div>
-          <div class="header-login">登录</div>
+        <div class="lg_tbar_r">
+          <ul class="passport">
+            <li class="upload-resume">上传简历</li>
+            <li class="quick-entrance">职位订阅</li>
+            <li class="login">登录</li>
+            <li class="bar">|</li>
+            <li class="register">注册</li>
+          </ul>
+          <a class="lg_app">拉勾APP</a>
+          <a class="lg_os">进入企业版</a>
         </div>
       </div>
+    </div>    
     </div>
     <div class="un-login-banner">
       <div class="un-login-banner-inner">
