新增或修改

--- a/lagou-web.html
+++ b/lagou-web.html
@@ -47,5 +47,38 @@
         </div>
       </div>
     </div>
+    <div class="un-login-banner">
+      <div class="un-login-banner-inner">
+        <div class="ad-logo"></div>
+        <div class="text-wrapper">
+          <div class="text-wrapper-img"></div>
+          <div class="text-wrapper-content">1017598家公司 | 7750951个职位，在拉勾等你</div>
+          <div class="register-login-form">
+            <div class="input-wrapper-tel">
+              <div class="area-code-content">0086</div>
+              <div class="area-code-content-after"></div>
+              <input type="text" class="tell-input" placeholder="输入手机号" />
+            </div>
+            <div class="input-wrapper yzm">
+              <input type="text" class="yzm-input" placeholder="验证码" />
+              <div class="yzm-btn">获取</div>
+            </div>
+            <div class="register-login-btn">登录/注册</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="search-wrapper">
+      <div class="tab-wrapper"></div>
+      <div class="search_box">
+        <input type="text" class="search_input" placeholder="搜索职位、公司或地点" />
+        <div class="search_button">搜索</div>
+      </div>
+    </div>
+    <div id="container">
+      <div class="container-body">
+
+      </div>
+    </div>
   </body>
 </html>
