新增或修改

--- a/lagou-web.html
+++ b/lagou-web.html
@@ -69,10 +69,25 @@
       </div>
     </div>
     <div class="search-wrapper">
-      <div class="tab-wrapper"></div>
+      <div class="tab-wrapper">
+        <a class="tab_pos">职位 ( 500+ )</a>
+      </div>
       <div class="search_box">
         <input type="text" class="search_input" placeholder="搜索职位、公司或地点" />
         <div class="search_button">搜索</div>
+      </div>
+      <div class="r_search_tit">
+        <span>相关搜索：</span>
+        <ul>
+          <li>javascript</li>
+          <li>html5</li>
+          <li>web</li>
+          <li>node.js</li>
+          <li>html5前端</li>
+          <li>前端实习</li>
+          <li>全栈</li>
+          <li>php</li>
+        </ul>
       </div>
     </div>
     <div id="container">
