新增或修改

--- a/lagou-web.html
+++ b/lagou-web.html
@@ -92,7 +92,105 @@
     </div>
     <div id="container">
       <div class="container-body">
-
+        <div class="content_left">
+          <div class="details">
+            <div class="has-more">
+              <span class="title">工作地点：</span>
+              <a class="current_city" href="">全国</a>
+              <a class="hot-city-name" href="">北京</a>
+              <a class="hot-city-name" href="">上海</a>
+              <a class="hot-city-name" href="">深圳</a>
+              <a class="hot-city-name" href="">广州</a>
+              <a class="hot-city-name" href="">杭州</a>
+              <a class="hot-city-name" href="">成都</a>
+              <a class="hot-city-name" href="">南京</a>
+              <a class="hot-city-name" href="">武汉</a>
+              <a class="hot-city-name" href="">西安</a>
+              <a class="hot-city-name" href="">厦门</a>
+              <a class="hot-city-name" href="">长沙</a>
+              <a class="hot-city-name" href="">苏州</a>
+              <a class="hot-city-name" href="">天津</a>
+              <a class="btn-more" href="">
+                更多
+                <div class="triangle"></div>
+              </a>
+            </div>
+            <li class="multi-chosen">
+              <span class="title">工作经验：</span>
+              <a class="unlimited_option" href="">不限</a>
+              <a class="option" href="">在校/应届</a>
+              <a class="option" href="">3年及以下</a>
+              <a class="option" href="">3-5年</a>
+              <a class="option" href="">5-10年</a>
+              <a class="option" href="">10年以上</a>
+              <a class="option" href="">不要求</a>
+            </li>
+            <li class="multi-chosen">
+              <span class="title">学历要求：</span>
+              <a class="unlimited_option" href="">不限</a>
+              <a class="option" href="">大专</a>
+              <a class="option" href="">本科</a>
+              <a class="option" href="">硕士</a>
+              <a class="option" href="">博士</a>
+              <a class="option" href="">不要求</a>
+            </li>
+            <li class="multi-chosen">
+              <span class="title">融资阶段：</span>
+              <a class="unlimited_option" href="">不限</a>
+              <a class="option" href="">未融资</a>
+              <a class="option" href="">天使轮</a>
+              <a class="option" href="">A轮</a>
+              <a class="option" href="">B轮</a>
+              <a class="option" href="">C轮</a>
+              <a class="option" href="">D轮及以上</a>
+              <a class="option" href="">上市公司</a>
+              <a class="option" href="">不需要融资</a>
+            </li>
+            <li class="multi-chosen">
+              <span class="title">公司规模：</span>
+              <a class="unlimited_option" href="">不限</a>
+              <a class="option" href="">少于15人</a>
+              <a class="option" href="">15-50人</a>
+              <a class="option" href="">50-150人</a>
+              <a class="option" href="">150-500人</a>
+              <a class="option" href="">500-2000人</a>
+              <a class="option" href="">2000人以上</a>
+            </li>
+            <div class="has-more-area">
+              <span class="title">行业领域：</span>
+              <a class="unlimited_area" href="">不限</a>
+              <a class="area" href="">移动互联网</a>
+              <a class="area" href="">电商</a>
+              <a class="area" href="">金融</a>
+              <a class="area" href="">企业服务</a>
+              <a class="area" href="">教育</a>
+              <a class="area" href="">文娱丨内容</a>
+              <a class="area" href="">游戏</a>
+              <a class="area" href="">消费生活</a>
+              <a class="area" href="">硬件</a>
+              <a class="btn-more" href="">
+                更多
+                <div class="triangle"></div>
+              </a>
+            </div>
+          <div class="btn-collapse-wrapper">
+            <a class="arrow" href=""></a>
+          </div>
+          </div>
+          <ul class="order">
+            <li class="wrapper">
+              <div class="item-order">
+                <span class="title">排序方式：</span>
+                <a class="default" href="">默认</a>
+                <a class="newest" href="">最新</a>
+              </div>
+              <div class="item-salary"></div>
+              <div class="item-type"></div>
+              <div class="item-page"></div>
+            </li>
+          </ul>
+        </div>
+        <div class="content_right"></div>
       </div>
     </div>
   </body>
