新增或修改

--- a/lagou-web.html
+++ b/lagou-web.html
@@ -184,8 +184,28 @@
                 <a class="default" href="">默认</a>
                 <a class="newest" href="">最新</a>
               </div>
-              <div class="item-salary"></div>
-              <div class="item-type"></div>
+              <div class="item-salary">
+                <span class="title">月薪：</span>
+                <select name="" id="">
+                  <option value="">不限</option>
+                  <option value="">2k以下</option>
+                  <option value="">2k-5k</option>
+                  <option value="">5k-10k</option>
+                  <option value="">10k-15k</option>
+                  <option value="">15k-25k</option>
+                  <option value="">25k-50k</option>
+                  <option value="">50k以上</option>
+                </select>
+              </div>
+              <div class="item-type">
+                <span class="title">月薪：</span>
+                <select name="" id="">
+                  <option value="">不限</option>
+                  <option value="">全职</option>
+                  <option value="">兼职</option>
+                  <option value="">实习</option>
+                </select>
+              </div>
               <div class="item-page"></div>
             </li>
           </ul>
