新增或修改

--- a/lagou-web.html
+++ b/lagou-web.html
@@ -198,7 +198,7 @@
                 </select>
               </div>
               <div class="item-type">
-                <span class="title">月薪：</span>
+                <span class="title">工作性质：</span>
                 <select name="" id="">
                   <option value="">不限</option>
                   <option value="">全职</option>
@@ -206,7 +206,15 @@
                   <option value="">实习</option>
                 </select>
               </div>
-              <div class="item-page"></div>
+              <div class="item-page">
+                <a class="prev" href=""></a>
+                <div class="page-number">
+                  <span class="curNum">1</span>
+                  /
+                  <span class="totalNum">30</span>
+                </div>
+                <a class="next" href=""></a>
+              </div>
             </li>
           </ul>
         </div>
